# changelog-slugs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  changelog.md  index.md  license.md
src/changelog_slugs/: __init__.py
tests/: test_integration.py  test_slugifier.py
